cabal-version:      1.12
name:               2captcha
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2021 Edward Yang
maintainer:         edwardyang0410@gmail.com
author:             Edward Yang
homepage:           https://github.com/qwbarch/2captcha-haskell#readme
bug-reports:        https://github.com/qwbarch/2captcha-haskell/issues
synopsis:           Haskell package for easy integration with the 2captcha API.
description:
    Haskell package for easy integration with the 2captcha API.
    .
    Feature list:
    .
    * Lens-based API
    * Uses Wreq for http calls

category:           Network
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/qwbarch/2captcha-haskell

library
    exposed-modules:
        TwoCaptcha.Captcha
        TwoCaptcha.Internal.Client
        TwoCaptcha.Internal.Types.Captcha
        TwoCaptcha.Internal.Types.CapyCaptcha
        TwoCaptcha.Internal.Types.CoordinateCaptcha
        TwoCaptcha.Internal.Types.Exception
        TwoCaptcha.Internal.Types.FunCaptcha
        TwoCaptcha.Internal.Types.GeeTestCaptcha
        TwoCaptcha.Internal.Types.GridCaptcha
        TwoCaptcha.Internal.Types.HCaptcha
        TwoCaptcha.Internal.Types.KeyCaptcha
        TwoCaptcha.Internal.Types.NormalCaptcha
        TwoCaptcha.Internal.Types.ReCaptcha
        TwoCaptcha.Internal.Types.RotateCaptcha
        TwoCaptcha.Internal.Types.TextCaptcha
        TwoCaptcha.Internal.Types.TikTokCaptcha

    hs-source-dirs:     src
    other-modules:      Paths_2captcha
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings FlexibleContexts FlexibleInstances
        UndecidableInstances RankNTypes ScopedTypeVariables LambdaCase
        MultiParamTypeClasses TemplateHaskell

    ghc-options:        -Wall -Wno-name-shadowing
    build-depends:
        aeson >=1.5.6.0 && <1.6,
        base >=4.7 && <5,
        bytestring >=0.10.12.0 && <0.11,
        clock >=0.8.2 && <0.9,
        exceptions >=0.10.4 && <0.11,
        http-client >=0.6.4.1 && <0.7,
        lens >=4.19.2 && <4.20,
        lens-aeson >=1.1.1 && <1.2,
        parsec >=3.1.14.0 && <3.2,
        text >=1.2.4.1 && <1.3,
        wreq >=0.5.3.3 && <0.6
