-- BEGIN Added by all-cabal-hashes-tool
package-hashes:
    MD5:d2ca49d8365935119eafaf8cf8b026a6
    SHA1:b19f0dd7d1527cce86a0cf626fa7a592972898c0
    SHA256:980405ac1a817f1a1c101e98d578e2d692b2d4b9df2d851d7e2fee6b49da5fec
    SHA512:6a627631e4c154fc42b7752d4cd73aa2cfb5b2f66e7e86d2c5d9701a80b12d690f990b7207c6b36d901a658998ebf15b90d3ed904a30bd6a905325dd11ce1c78
    Skein512_512:2234b6181513ccf4dce9ac1416dcac1dfe3e6620beab85a65c1ce7a0d0198fad761b4eb9fa57b940bce0e7a23feca043295422647e1adc1b0533d1223ead90ed

package-locations:
    https://hackage.haskell.org/package/3d-graphics-examples-0.0.0.0/3d-graphics-examples-0.0.0.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/3d-graphics-examples-0.0.0.0.tar.gz

package-size: 11968
-- END Added by all-cabal-hashes-tool

Name:          3d-graphics-examples
Version:       0.0.0.0
Cabal-Version: >= 1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2006       Matthias Reisner;
               © 2012, 2013 Wolfgang Jeltsch
Author:        Matthias Reisner
Maintainer:    wolfgang@cs.ioc.ee
Stability:     provisional
Homepage:      http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples
Package-URL:   http://hackage.haskell.org/packages/archive/3d-graphics-examples/0.0.0.0/3d-graphics-examples-0.0.0.0.tar.gz
Synopsis:      Examples of 3D graphics programming with OpenGL
Description:   This package demonstrates how to program simple interactive 3D
               graphics with OpenGL. It contains two programs, which are both
               about fractals:
               .
               [L-systems] generates graphics from Lindenmayer systems
               (L-systems). It defines a language for L-systems as an embedded
               DSL.
               .
               [Mountains] uses the generalized Brownian motion to generate
               graphics that resemble mountain landscapes.
               .
               The original versions of these programs were written by Matthias
               Reisner as part of a student project at the Brandenburg
               University of Technology at Cottbus, Germany. Wolfgang Jeltsch,
               who supervised this student project, is now maintaining these
               programs.
Category:      Graphics, Fractals
Tested-With:   GHC == 7.6.3

Source-Repository head
    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples/main

Source-Repository this
    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples/main
    Tag:      3d-graphics-examples-0.0.0.0

Executable l-systems
    Build-Depends:  base   >= 3.0 && < 5,
                    GLUT   >= 2.4 && < 2.6,
                    OpenGL >= 2.8 && < 2.10
    Main-Is:        LSystems.hs
    Other-Modules:  Utilities
                    ConiferLSystem
                    IslandLSystem
                    KochLSystem
                    LSystem
                    TreeLSystem
                    Turtle
    HS-Source-Dirs: src src/l-systems

Executable mountains
    Build-Depends:  base   >= 3.0 && < 5,
                    GLUT   >= 2.4 && < 2.6,
                    OpenGL >= 2.8 && < 2.10,
                    random >= 1.0 && < 1.1
    Main-Is:        Mountains.hs
    Other-Modules:  Utilities
    HS-Source-Dirs: src src/mountains
