-- BEGIN Added by all-cabal-hashes-tool
x-package-hashes:
    MD5:fdcc6733a5d848e288308c2bb921368d
    SHA1:4bcbf4dab908085af5ebb6d9238f3a051202d015
    SHA256:c537abf41884456b2355a52ed61bb81cc9c5f4ee87cd089f50c69dde6ab2678d
    SHA512:77a5a21f587cdac5a708c4ae6155a53638119a926438b3454269a501422d86c9890f40766ba86a577027aca5636a874d0a72955ba83a65901ec7603f1cdd8049
    Skein512_512:a9a8be1dd86a5e59e3bb0081b420579f79937d03d79e4417c35ad39d6259d09a0d6d2f9af025823258cb5f68a26b9b6f2210d39d884ee3e3c94f91c73973c1e3

x-package-locations:
    https://hackage.haskell.org/package/3d-graphics-examples-0.0.0.1/3d-graphics-examples-0.0.0.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/3d-graphics-examples-0.0.0.1.tar.gz

x-package-size: 11970
-- END Added by all-cabal-hashes-tool

Name:          3d-graphics-examples
Version:       0.0.0.1
Cabal-Version: >= 1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2006      Matthias Reisner;
               © 2012–2015 Wolfgang Jeltsch
Author:        Matthias Reisner
Maintainer:    wolfgang@cs.ioc.ee
Stability:     provisional
Homepage:      http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples
Package-URL:   http://hackage.haskell.org/packages/archive/3d-graphics-examples/0.0.0.1/3d-graphics-examples-0.0.0.1.tar.gz
Synopsis:      Examples of 3D graphics programming with OpenGL
Description:   This package demonstrates how to program simple interactive 3D
               graphics with OpenGL. It contains two programs, which are both
               about fractals:
               .
               [L-systems] generates graphics from Lindenmayer systems
               (L-systems). It defines a language for L-systems as an embedded
               DSL.
               .
               [Mountains] uses the generalized Brownian motion to generate
               graphics that resemble mountain landscapes.
               .
               The original versions of these programs were written by Matthias
               Reisner as part of a student project at the Brandenburg
               University of Technology at Cottbus, Germany. Wolfgang Jeltsch,
               who supervised this student project, is now maintaining these
               programs.
Category:      Graphics, Fractals
Tested-With:   GHC == 7.10.1

Source-Repository head
    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples/main

Source-Repository this
    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples/main
    Tag:      3d-graphics-examples-0.0.0.1

Executable mountains
    Build-Depends:  base   >= 3.0 && < 5,
                    GLUT   >= 2.4 && < 2.8,
                    OpenGL >= 2.8 && < 2.13,
                    random >= 1.0 && < 1.1
    Extensions:     FlexibleContexts
    Main-Is:        Mountains.hs
    Other-Modules:  Utilities
    HS-Source-Dirs: src src/mountains

Executable l-systems
    Build-Depends:  base   >= 3.0 && < 5,
                    GLUT   >= 2.4 && < 2.8,
                    OpenGL >= 2.8 && < 2.13
    Extensions:     FlexibleContexts
    Main-Is:        LSystems.hs
    Other-Modules:  Utilities
                    ConiferLSystem
                    IslandLSystem
                    KochLSystem
                    LSystem
                    TreeLSystem
                    Turtle
    HS-Source-Dirs: src src/l-systems
