Name:          3d-graphics-examples
Version:       0.0.0.2
Cabal-Version: >= 1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2006      Matthias Reisner;
               © 2012–2015 Wolfgang Jeltsch
Author:        Matthias Reisner
Maintainer:    wolfgang@cs.ioc.ee
Stability:     provisional
Homepage:      http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples
Package-URL:   http://hackage.haskell.org/packages/archive/3d-graphics-examples/0.0.0.2/3d-graphics-examples-0.0.0.2.tar.gz
Synopsis:      Examples of 3D graphics programming with OpenGL
Description:   This package demonstrates how to program simple interactive 3D
               graphics with OpenGL. It contains two programs, which are both
               about fractals:
               .
               [L-systems] generates graphics from Lindenmayer systems
               (L-systems). It defines a language for L-systems as an embedded
               DSL.
               .
               [Mountains] uses the generalized Brownian motion to generate
               graphics that resemble mountain landscapes.
               .
               The original versions of these programs were written by Matthias
               Reisner as part of a student project at the Brandenburg
               University of Technology at Cottbus, Germany. Wolfgang Jeltsch,
               who supervised this student project, is now maintaining these
               programs.
Category:      Graphics, Fractals
Tested-With:   GHC == 8.0.1

Source-Repository head
    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples/main

Source-Repository this
    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/3d-graphics-examples/main
    Tag:      3d-graphics-examples-0.0.0.2

Executable mountains
    Build-Depends:  base   >= 3.0 && < 5,
                    GLUT   >= 2.4 && < 2.8,
                    OpenGL >= 2.8 && < 3.1,
                    random >= 1.0 && < 1.2
    Extensions:     FlexibleContexts
    Main-Is:        Mountains.hs
    Other-Modules:  Utilities
    HS-Source-Dirs: src src/mountains

Executable l-systems
    Build-Depends:  base   >= 3.0 && < 5,
                    GLUT   >= 2.4 && < 2.8,
                    OpenGL >= 2.8 && < 3.1
    Extensions:     FlexibleContexts
    Main-Is:        LSystems.hs
    Other-Modules:  Utilities
                    ConiferLSystem
                    IslandLSystem
                    KochLSystem
                    LSystem
                    TreeLSystem
                    Turtle
    HS-Source-Dirs: src src/l-systems
