name:                   AAI
version:                0.1.0.0
synopsis:               Abstract Application Interface.
description:            The Abstract Application Interface is used to define a
                        generic interface for handling command line parameter
                        to command mapping. It may route a command by giving a
                        simple parameter list and a list of supported commands.
license:                MIT
license-file:           LICENSE
author:                 Nils 'bash0r' Jonsson
maintainer:             aka.bash0r@gmail.com
copyright:              (c) 2015 Nils 'bash0r' Jonsson
category:               Control
build-type:             Simple
extra-source-files:     README.md
                  ,     LICENSE
cabal-version:          >=1.10

source-repository head
  type:                 git
  location:             https://github.com/aka-bash0r/AAI

source-repository this
  type:                 git
  location:             https://github.com/aka-bash0r/AAI
  tag:                  v0.1.0.0

library
  exposed-modules:      Control.Command
                 ,      Control.Router
  build-depends:        base >=4.8 && <4.9
  hs-source-dirs:       src
  default-language:     Haskell2010
