Name:               ABList
Version:            0.0.1
Author:             Dylan Just <dylan@techtangents.com>
License:            BSD3
Copyright:          Dylan Just, Travis Cardwell
Maintainer:         Dylan Just
Category:           Control
Synopsis:           An alternating list of two types
Description:        An alternating list of two types
Cabal-version:      >= 1.10
Build-Type:         Simple


Library
  default-language: Haskell2010
  Build-Depends:    base < 5 && >= 3,
                    linear,
                    newtype

  GHC-Options:      -Wall
                    -fno-warn-type-defaults
                    -fno-warn-name-shadowing

  Exposed-Modules:  Data.AbList
                    Data.AbneList
  hs-source-dirs:   src


test-suite the-tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src
  main-is:           Tests.hs
  build-depends:     base,
                     HUnit,
                     QuickCheck,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2


package-hashes:
    MD5:9702fb0ad9fc370973b4f1e63cc0f2b5
    SHA1:898690fba3f54e4c7be508a6a0126ee473070b26
    SHA256:e6ac8e51222f9c8e8b4a713f7c2dbaeb97d7762d224fa67488cb842617d6d2d9
    SHA512:79c5a4b171304c1a4cca19490b99ac5d4cf3d7939f2edc2d71e8c8d0736f68297ee8c527aa623ac2b47d1cde90bce8d7683061b397f8c969c6c9ed635ec516c4
    Skein512_512:c7d8d502df46e4bbbf7ca47032a3e72f4080cb693abd6d87eda1f7a1b5aac6afa25723b9aae5e75010c8d5c468ec6c0302b3506f0d3cda88f589bb27be3a4fa3

package-locations:
    https://hackage.haskell.org/package/ABList-0.0.1/ABList-0.0.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/ABList-0.0.1.tar.gz

package-size: 2281
