Name:               ABList
Version:            0.0.2
Author:             Dylan Just <dylan@techtangents.com>
License:            BSD3
license-file:       license.txt
Copyright:          Dylan Just, Travis Cardwell
Maintainer:         Dylan Just
Category:           Control
Synopsis:           An alternating list of two types
Description:        An alternating list of two types
Cabal-version:      >= 1.10
Build-Type:         Simple


Library
  default-language: Haskell2010
  Build-Depends:    base < 5 && >= 3,
                    linear,
                    newtype

  GHC-Options:      -Wall
                    -fno-warn-type-defaults
                    -fno-warn-name-shadowing

  Exposed-Modules:  Data.AbList
                    Data.AbneList
  hs-source-dirs:   src


test-suite the-tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src
  main-is:           Tests.hs
  build-depends:     base,
                     HUnit,
                     QuickCheck,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2


package-hashes:
    MD5:c8bf99cb59cf78a9325ce59381c6720b
    SHA1:7733f1f29b4f83f5be64871412d414031a5e82e9
    SHA256:090e199c5a5be3c4d9eb2e3047c88caefeb5199b6d4f906b0311b36992f94377
    SHA512:8cb3e1c669a2450778d07b7724a2ad6230fc1120a81ff4aac326bcf694aef191e1ca22086acc1b3ff052c5551b60302471eaabacddc28fcf8039752f8d54db05
    Skein512_512:dca0e837ccde8f8224dc8254d5290b9c2915f52a41558531d9ce8352383592df78c2f28648902669c80bca2057ec6df6ca141f9a0cccc54919d72aad86562b77

package-locations:
    https://hackage.haskell.org/package/ABList-0.0.2/ABList-0.0.2.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/ABList-0.0.2.tar.gz

