Name:               ABList
Version:            0.0.3
Author:             Dylan Just <dylan@techtangents.com>
License:            BSD3
license-file:       license.txt
Copyright:          Dylan Just, Travis Cardwell
Maintainer:         Dylan Just
Category:           Data
Synopsis:           An alternating list of two types
Description:        An alternating list of two types
Cabal-version:      >= 1.10
Build-Type:         Simple
source-repository head
  type:     git
  location: https://github.com/techtangents/ablist.git

Library
  default-language: Haskell2010
  Build-Depends:    base < 5 && >= 3,
                    linear,
                    newtype

  GHC-Options:      -Wall
                    -fno-warn-type-defaults
                    -fno-warn-name-shadowing

  Exposed-Modules:  Data.AbList
                    Data.AbneList
  hs-source-dirs:   src


test-suite the-tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src
  main-is:           Tests.hs
  build-depends:     base,
                     HUnit,
                     QuickCheck,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2


package-hashes:
    MD5:3f35bc343d0921046827f0dbebb17794
    SHA1:3c87976bbb38d3a5991e2db38cb63e3af436e0ef
    SHA256:016f571499f63744b2696708117dafdd2909f8224a83637d829d2d3a6619121a
    SHA512:b3dc9f75a341fa3dd14ea3ea573e721e3cd52c25dc1f4dac8b2ed39fff412286461b154e7c229b6470651fca6b0f37bc371fb9ca6b7e03c31be154960e29bb16
    Skein512_512:dc485cf1cee6f985c122fe1ae460a9c2fd980cd2baa51be63ecb33988f8e9f802c0a5633c5c2e2841b87ba7ab6d15f8838d3b5f884cd0371a613c754729efcfd

package-locations:
    https://hackage.haskell.org/package/ABList-0.0.3/ABList-0.0.3.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/ABList-0.0.3.tar.gz

package-size: 3127
