-- BEGIN Added by all-cabal-hashes-tool
package-hashes:
    MD5:49f1b69d4f3b19c5bb91dc4b399740ca
    SHA1:a9b78e0bfbd4e01a5a1f3d05937d2b30f0cfd60a
    SHA256:b545b0086832adc7d9ae15b4c3f3d1522d63a746f204570766828f1a893a4965
    SHA512:8e7098c991ba391ed3b5fc17ed699631236af73bfe68859be649f4ccd7fec4557aee416f20a2428a786c51604e07bf2dfa065fc5f64f93879ef60269b60cace8
    Skein512_512:92774913669728795cc738451cee4ba5c339a40eb4292239f42d9e764b602631887a2a5f97b2876f4b39b44a1e8cc0f56843b1eb790051863d7239dfd43ef71f

package-locations:
    https://hackage.haskell.org/package/AC-Angle-1.0/AC-Angle-1.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Angle-1.0.tar.gz

package-size: 1813
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-Angle
Version:       1.0
Stability:     Experimental
Synopsis:      Angles in degrees and radians.

Description:

  A simple little library for dealing with geometric angles.

Category:      Data, Math, Numerical
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.Angle
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .
