Cabal-Version: >= 1.6
Name:          AC-Boolean
Version:       1.0.0
Stability:     Experimental
Synopsis:      Handle Boolean values generatically.

Description:

  This package provides various functions and classes for dealing
  with things which are like Boolean values. It also defines a
  few useful instances. The main benefit is the ability to use
  the usual @&&@, etc. operators without having to invent new
  operator names for every kind of Bool-like thing.

Category:      Data, Logic, Math
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.12.3

Library
  Exposed-modules: Data.Boolean
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .


package-hashes:
    MD5:1747ae76162527567c113b726fb74380
    SHA1:9a6d8c4453322f70e8b6f3e05054eb491049bb03
    SHA256:7a5d84b6b39858146d7b396bb5ea37931a5d3245ff86d16f81cf1fb6f37e1202
    SHA512:2239ffc08d6d9ada5421bc5142af00f5a3a356561ef6cbfd18ef379bfe1ab5d0fbe1195088a63174ea135c3cde873295d8e8bc50069e5b103ae8bf5b3a879ede
    Skein512_512:94c88eea1d33d477cd9198fa22ad5c70a6ee063b6cfb5298ef795dd9fc310950e015778c54b6cf416fefd39bc22ad7d8b30aaad6fd4b7ed0fa2db58e047f30ce

package-locations:
    https://hackage.haskell.org/package/AC-Boolean-1.0.0/AC-Boolean-1.0.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Boolean-1.0.0.tar.gz

