Cabal-Version: >= 1.6
Name:          AC-Boolean
Version:       1.1.0
Stability:     Experimental
Synopsis:      Handle Boolean values generatically.

Description:

  This package provides various functions and classes for dealing
  with things which are like Boolean values. It also defines a
  few useful instances. The main benefit is the ability to use
  the usual @&&@, etc. operators without having to invent new
  operator names for every kind of Bool-like thing.
  .
  Changes:
  .
  * Increase efficiency of @Boolean@ instance for @Bool@.
  .
  * Shorten source code.
  .
  * Remove function instance. (@Control.Monad.Instances@ provides
    an equivilent @Monad@ instance.)

Category:      Data, Logic, Math
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.12.3

Library
  Exposed-modules: Data.Boolean
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .


package-hashes:
    MD5:936ceb3bde518c342f3aabbefe6a069c
    SHA1:3ae78a1349e3addb2d1ba833971c4bdc51c80765
    SHA256:4bf08cc6648c8e9e84da14fc3b6294294869a79fdfc1f682bbe249711f4fa145
    SHA512:9e09181c2dd2c29461fd615da542cacd86532e79a6752fd8b9ac769c85cab0ac4be7fbe1997f516d20a56795116e41430fe94e27ebe863f3394da998be60b7c7
    Skein512_512:97d1e9cf6c7c52976a67d0ef6c143892c28f14114052b5552b2cfda5a01a6e95cdf4b3c235dab517269ca0c593d0873e48ae8224606578a9518f4a93fdb7d0ba

package-locations:
    https://hackage.haskell.org/package/AC-Boolean-1.1.0/AC-Boolean-1.1.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Boolean-1.1.0.tar.gz

package-size: 2813
