Cabal-version:       >=1.6
Name:                AC-BuildPlatform
Version:             1.0.0
Synopsis:            Detect which OS you're running on.
Description:

  This package lets you easily query various facts about the system
  that your code is running on. Currently, it reports whether the
  operating system is \"Windows\" or \"Unix\", and also the name and
  version of the Haskell compiler used.
  .
  This package implements lots of complicated trickery to determine
  the build environment. Once built, other packages can query this
  information without needing to do complex trickery themselves.
  .
  Design assumptions:
  .
  * You are using GHC, version 6.8.1 or newer.
  .
  * You build this package using the Cabal-install tool. (Just doing
    @runhaskell Setup@ won't work properly.)
  .
  If these conditions are not met, the package should still /build/,
  it's just that all the compile-time constants will come back as
  'Nothing'.
  .
  See also the included @ReadMe.xhtml@ file.

License:             BSD3
License-file:        License.txt
Author:              Andrew Coppin
Maintainer:          MathematicalOrchid@hotmail.com
Category:            System
Build-type:          Custom
Extra-tmp-files:     Include/Platform.h
Extra-source-files:  ReadMe.xhtml

Library
  Exposed-modules:
    System.Platform
  Build-depends:
    base == 4.*
  Include-dirs: Include


package-hashes:
    MD5:a707178715847f9c88cec5b654bcb503
    SHA1:409f78d02086827ecf0b109b5c3408a7c76e7164
    SHA256:f9aa56cc6df4469ff6e3ea69f460668991f6d0d9ea9a92715e57e298a7d1134b
    SHA512:44b8d68793556f7b4276af07c5dcfc1dff9f841b2e861949086d30a6056e2f8530da96f5ab4bb3da3033400234fb6a99bb3f32612bb4a6ab907778092d4d5994
    Skein512_512:d57bb29de4dff21fec4bb7fdaecdf45fb3184f690bc31a542d0c47472b3154ab09cb48421e77d09aec099b9d600d29d3ff79be9ade8d28fd2521e1aad6e3b2d2

package-locations:
    https://hackage.haskell.org/package/AC-BuildPlatform-1.0.0/AC-BuildPlatform-1.0.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-BuildPlatform-1.0.0.tar.gz

package-size: 5450
