-- BEGIN Added by all-cabal-hashes-tool
x-package-hashes:
    MD5:32d6a30a0715cbdbc574f3e88f68393a
    SHA1:96d85b6c2ce080e4197cd9f88943514ea898e4d5
    SHA256:f033919101259e07668df195e1ff20172239a7ae2f93b2b6ff9fb06ad854906e
    SHA512:a2ada9b1199dcff53ac2c287ed7545bb176b4c6ecc0911265b41ea8ac5d94b8179eeb03b0b1168411aa3f55fc3ab716d50fb0d0f220bc2585d6338c2e0502b2c
    Skein512_512:84142460ccb07fb47e8794af5bc6decf0649da5dca474b04877bf1ca600fa630f1f8e9607755f21a871749631c930d3d464e65ef6213a77d02b93bdf79a13d81

x-package-locations:
    https://hackage.haskell.org/package/AC-BuildPlatform-1.1.0/AC-BuildPlatform-1.1.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-BuildPlatform-1.1.0.tar.gz

x-package-size: 6566
-- END Added by all-cabal-hashes-tool

Cabal-version:       >=1.6
Name:                AC-BuildPlatform
Version:             1.1.0
Synopsis:            Detect which OS you're running on.
Description:

  This package lets you easily query various facts about the system
  that your code is running on. Currently, it reports whether the
  operating system is \"Windows\" or \"Unix\", and also the name and
  version of the Haskell compiler used.
  .
  This package implements lots of complicated trickery to determine
  the build environment. Once built, other packages can query this
  information without needing to do complex trickery themselves.
  .
  See also the included @ReadMe.xhtml@ file.
  .
  Changes:
  .
  * If the configure step fails to detect the OS type, the configure
    step now /fails/.
  .
  * A new file @Manual.hs@ allows you to override the
    auto-detected platform values with whatever you want. (See
    @ReadMe.xhtml@ for details.)
  .
  * All the platform queries no longer return @Maybe@ values. (This
    breaks API compatibility, hence the version bump.)

License:             BSD3
License-file:        License.txt
Author:              Andrew Coppin
Maintainer:          MathematicalOrchid@hotmail.com
Category:            System
Build-type:          Custom
Extra-tmp-files:     Include/Platform.h
Extra-source-files:
  Configure/Detect.hs
  Configure/Write.hs
  Manual.hs
  ReadMe.xhtml

Library
  Exposed-modules:
    System.Platform
  Build-depends:
    base == 4.*
  Include-dirs: Include
