Cabal-version:       >=1.6
Name:                AC-BuildPlatform
Version:             1.1.0
Synopsis:            Detect which OS you're running on.
Description:

  This package lets you easily query various facts about the system
  that your code is running on. Currently, it reports whether the
  operating system is \"Windows\" or \"Unix\", and also the name and
  version of the Haskell compiler used.
  .
  This package implements lots of complicated trickery to determine
  the build environment. Once built, other packages can query this
  information without needing to do complex trickery themselves.
  .
  See also the included @ReadMe.xhtml@ file.
  .
  Changes:
  .
  * If the configure step fails to detect the OS type, the configure
    step now /fails/.
  .
  * A new file @Manual.hs@ allows you to override the
    auto-detected platform values with whatever you want. (See
    @ReadMe.xhtml@ for details.)
  .
  * All the platform queries no longer return @Maybe@ values. (This
    breaks API compatibility, hence the version bump.)

License:             BSD3
License-file:        License.txt
Author:              Andrew Coppin
Maintainer:          MathematicalOrchid@hotmail.com
Category:            System
Build-type:          Custom
Extra-tmp-files:     Include/Platform.h
Extra-source-files:
  Configure/Detect.hs
  Configure/Write.hs
  Manual.hs
  ReadMe.xhtml

Library
  Exposed-modules:
    System.Platform
  Build-depends:
    base == 4.*
  Include-dirs: Include
