Cabal-Version: >= 1.6
Name:          AC-Colour
Version:       1.1.1
Stability:     Experimental
Synopsis:      Efficient RGB colour types.

Description:

  This Haskell library is a basic RGB colour types, with
  both @Double@ and @Word8@ channel types. It implements
  efficient conversions between the two (GHC-specific),
  and general arithmetic over colours.

Category:      Data, Math, Numerical, Graphics
License:       BSD3
License-file:  Licence.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.Colour.Double, Data.Colour.Word8, Data.Colour.FastFloor, Data.Colour
  Build-Depends:   base >= 4 && < 5, ghc-prim >= 0.1.0.0 && < 0.2
  HS-Source-Dirs:  .


package-hashes:
    MD5:7260b6e9b0620169b1d9210262bd48aa
    SHA1:7e04d9300374548db0d066aafb66d5cf0e706c7c
    SHA256:26a04ad2473a7c5382a39d4e0189a9503f7fe85aab09eb3cbe5331ddfba02c60
    SHA512:061a86f10f40f4748f82815c573da30a34f9a170a10ce624aac6db53219784c1dcf90b66d101a7367158fb8dfaa6ad6c0dd97dbe84f70b0d5c2d37916cfded14
    Skein512_512:42e89e6519649887231b2054599a0e956923afbc7695cf8e0b170cad415a4c95500d7ee114d0ad9fe78c5e70ad2b243928eec7299bcb8ab29c36ecd5cf6f6262

package-locations:
    https://hackage.haskell.org/package/AC-Colour-1.1.1/AC-Colour-1.1.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Colour-1.1.1.tar.gz

