Cabal-Version: >= 1.6
Name:          AC-Colour
Version:       1.1.2
Stability:     Experimental
Synopsis:      Efficient RGB colour types.

Description:

  This Haskell library is a basic RGB colour types, with
  both @Double@ and @Word8@ channel types. It implements
  efficient conversions between the two (GHC-specific),
  and general arithmetic over colours.

  Changes:

  * Now works with GHC 6.12.x.

Category:      Data, Math, Numerical, Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.Colour.Double, Data.Colour.Word8, Data.Colour.FastFloor, Data.Colour
  Build-Depends:   base >= 4 && < 5, ghc-prim >= 0.1.0.0 && < 0.3
  HS-Source-Dirs:  .


package-hashes:
    MD5:1da58706379972781d5a4c0044a36f38
    SHA1:af4a53d16059ffafa128894e3e5d7f4d810637a4
    SHA256:47953bf22816603fca6843cd3644aa092831925d89f7a751f39155a2f382dc78
    SHA512:d38cd4c9cce249066c838f87debe99d4b6a663b745473ac15b6034698d23ee0acbc9cab834148aaed7103a39189bcaeb38f57ae04675740a2a2a274f1fd1bba2
    Skein512_512:6dd5430f414181c554e664dfc550cc1be7daee8fa1061c33f8847937caa7457b6de8b8886e786220d7f4b44e3a99b9f74f7224d856b6ec675bc0f2325ed6e5c9

package-locations:
    https://hackage.haskell.org/package/AC-Colour-1.1.2/AC-Colour-1.1.2.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Colour-1.1.2.tar.gz

