-- BEGIN Added by all-cabal-hashes-tool
package-hashes:
    MD5:060edc563c5e0a1faae622d448716cf5
    SHA1:e28f9f745b6cae221a1f011660dcef4151f72780
    SHA256:03bdee27d479995ed34f48cfd3c76076593bd00d52385cf5731a821d2f42104c
    SHA512:5356513dd9c9356d0da9fe0c37a051e2f9d3614acbfe76fc597850071334e9e1c1c13fb350125ec72175459b71c7209ce67d2c06dfdfd52c69c73370cae1f1b4
    Skein512_512:4862e5fd5603e8501fd45aee1e7a3639db853fe35489a8362d871063656332c06c7ad1442ec16a11e5804c21765439569270ea90aaa44e6e22fef86d57dbfffb

package-locations:
    https://hackage.haskell.org/package/AC-Colour-1.1.3/AC-Colour-1.1.3.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Colour-1.1.3.tar.gz

package-size: 5591
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-Colour
Version:       1.1.3
Stability:     Experimental
Synopsis:      Efficient RGB colour types.

Description:

  This Haskell library is a basic RGB colour types, with
  both @Double@ and @Word8@ channel types. It implements
  efficient conversions between the two (GHC-specific),
  and general arithmetic over colours.

  Changes:

  * Added (linear) colour map support.

  * Added pack/unpack functions.

Category:      Data, Math, Numerical, Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.Colour.Double, Data.Colour.Map, Data.Colour.Word8, Data.Colour.FastFloor, Data.Colour
  Build-Depends:   base >= 4 && < 5, ghc-prim >= 0.1.0.0 && < 0.3
  HS-Source-Dirs:  .
